# push_swap

./: CMakeLists.txt  Makefile  README.md  text.txt  ttt.txt
includes/: push_swap.h
libft/srcs/: ft_qstr.c  ft_strdup.c  ft_strlen.c  get_next_line.c
randomizer/: randomizer.c
srcs/: check_order.c  ft_operations.c  ft_reader.c
srcs_checker/: checker.c  ps_visual.c
srcs_push_swap/: push_swap.c  searching.c  src_sec.c
